# EXUDYN

./: .buildinfo  .readthedocs.yaml  CONTRIBUTING.md  INSTALL.txt  LICENSE.txt  README.md  README.rst  README.txt  azure-pipelines.yml  conf.py  genindex.html  index.html  index.rst  objects.inv  requirements.txt  search.html  searchindex.js
main/include/ngs-core-master/: CMakeLists.txt  array.hpp  autodiff.hpp  bitarray.cpp  bitarray.hpp  exception.cpp  hashtable.hpp  localheap.cpp  localheap.hpp  matrix.hpp  ngs_core.hpp  paje_interface.cpp  paje_interface.hpp  profiler.cpp  profiler.hpp  simd.hpp  table.cpp  taskmanager.cpp  taskmanager.hpp
main/src/: CMakeLists.txt
main/src/Autogenerated/: BeamSectionGeometry.h  CLoadCoordinate.h  CLoadForceVector.h  CLoadMassProportional.h  CLoadTorqueVector.h  CMarkerBody.h  CMarkerBodyCable2DCoordinates.h  CMarkerBodyCable2DShape.h  CMarkerBodyMass.h  CMarkerBodyPosition.h  CMarkerBodyRigid.h  CMarkerGenericBodyPosition.h  CMarkerKinematicTreeRigid.h  CMarkerNodeCoordinate.h  CMarkerNodeCoordinates.h  CMarkerNodeODE1Coordinate.h  CMarkerNodePosition.h  CMarkerNodeRigid.h  CMarkerNodeRotationCoordinate.h  CMarkerObjectODE2Coordinates.h  CMarkerSuperElementPosition.h  CMarkerSuperElementRigid.h  CNode1D.h  CNodeGenericAE.h  CNodeGenericData.h  CNodeGenericODE1.h  CNodeGenericODE2.h  CNodePoint.h  CNodePoint2D.h  CNodePoint2DSlope1.h  CNodePoint3DSlope1.h  CNodePoint3DSlope23.h  CNodePointGround.h  CNodePointSlope1.h  CNodePointSlope12.h  CNodePointSlope23.h  CNodeRigidBody2D.h  CNodeRigidBodyEP.h  CNodeRigidBodyRotVecDataLG.h  CNodeRigidBodyRotVecLG.h  (+285 more)
main/src/Graphics/: GlfwClient.cpp  GlfwClient.h  GlfwClientBitmapText.h  GlfwClientExtended.cpp  GlfwClientText.h  GraphicsData.h  OpenVRinterface.cpp  OpenVRinterface.h  PostProcessData.cpp  PostProcessData.h  VisuNode.h  VisualizationBasics.h  VisualizationPrimitives.cpp  VisualizationPrimitives.h  VisualizationSystem.cpp  VisualizationSystem.h  VisualizationSystemContainer.cpp  VisualizationSystemContainer.h  VisualizationSystemContainerBase.h  VisualizationSystemData.cpp  VisualizationSystemData.h  VisualizationUserFunctions.cpp  characterBitmap.h
main/src/Linalg/: BasicLinalg.h  ConstSizeMatrix.h  ConstSizeVector.h  Geometry.h  KinematicsBasics.h  LinearSolver.cpp  LinearSolver.h  LinkedDataMatrix.h  LinkedDataVector.h  LinkedDataVectorParallel.h  Matrix.cpp  Matrix.h  MatrixContainer.h  MatrixVectorLists.h  ResizableMatrix.h  ResizableVector.h  ResizableVectorParallel.h  RigidBodyMath.h  SearchTree.h  SlimVector.h  Symbolic.cpp  Symbolic.h  SymbolicMatrix.h  SymbolicUtilities.h  SymbolicVector.h  Use_avx.h  Vector.cpp  Vector.h
main/src/Main/: CData.h  CSystem.cpp  CSystem.h  CSystemData.h  CSystemState.h  Experimental.h  MainObjectFactory.cpp  MainObjectFactory.h  MainSystem.cpp  MainSystem.h  MainSystemBase.h  MainSystemContainer.cpp  MainSystemContainer.h  MainSystemData.h  MarkerData.h  OutputVariable.h  Stdoutput.cpp  Stdoutput.h  StructuralElementsDataStructures.h  SystemContainer.h  TemporaryComputationData.h  WriteBinary.h  rendererPythonInterface.cpp  rendererPythonInterface.h
main/src/Objects/: CMarkerBodyCable2DCoordinates.cpp  CMarkerBodyCable2DShape.cpp  CMarkerBodyMass.cpp  CMarkerBodyPosition.cpp  CMarkerBodyRigid.cpp  CMarkerGenericBodyPosition.cpp  CMarkerKinematicTreeRigid.cpp  CMarkerNodeCoordinate.cpp  CMarkerNodeCoordinates.cpp  CMarkerNodeODE1Coordinate.cpp  CMarkerNodePosition.cpp  CMarkerNodeRigid.cpp  CMarkerNodeRotationCoordinate.cpp  CMarkerObjectODE2Coordinates.cpp  CMarkerSuperElementPosition.cpp  CMarkerSuperElementRigid.cpp  CNode1D.cpp  CNodeGenericAE.cpp  CNodeGenericData.cpp  CNodeGenericODE1.cpp  CNodeGenericODE2.cpp  CNodePoint.cpp  CNodePoint2D.cpp  CNodePoint2DSlope1.cpp  CNodePoint3DSlope1.cpp  CNodePoint3DSlope23.cpp  CNodePointGround.cpp  CNodePointSlope1.cpp  CNodePointSlope12.cpp  (+62 more)
(+2614 files in other folders)
